[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/images/enemies/enemies-01 - 48x48.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapons/MGWeapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/Boss.gd" type="Script" id=3]
[ext_resource path="res://scenes/projectiles/EnemyProjectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/effects/explosion - 48x48.png" type="Texture" id=5]
[ext_resource path="res://assets/images/enemies/enemies - hit effect - 48x48.png" type="Texture" id=6]
[ext_resource path="res://scenes/weapons/ShotgunWeapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/weapons/RocketWeapon.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/enemies/boss-main - hit effect - 48x48.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 34 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "die",
"speed": 12.0
} ]

[sub_resource type="Curve2D" id=37]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 32, 0, 0, 0, 0, -10.6667, 32, 0, 0, 0, 0, -18.6667, 26.6667, 0, 0, 0, 0, -26.6667, 18.6667, 0, 0, 0, 0, -32, 8, 0, 0, 0, 0, -34.6667, 0, 0, 0, 0, 0, -32, -13.3333, 0, 0, 0, 0, -26.6667, -21.3333, 0, 0, 0, 0, -18.6667, -26.6667, 0, 0, 0, 0, -5.33333, -32, 0, 0, 0, 0, 10.6667, -32, 0, 0, 0, 0, 18.6667, -29.3333, 0, 0, 0, 0, 26.6667, -21.3333, 0, 0, 0, 0, 29.3333, -10.6667, 0, 0, 0, 0, 32, 2.66667, 0, 0, 0, 0, 29.3333, 10.6667, 0, 0, 0, 0, 24, 18.6667, 0, 0, 0, 0, 16, 26.6667, 0, 0, 0, 0, 8, 32, 0, 0, 0, 0, 0, 32 )
}

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
health = 80
speed = 30
attack_delay = 2.0
weapon = NodePath("MGWeapon")

[node name="RocketWeapon" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )

[node name="AttackDelay" type="Timer" parent="."]

[node name="MGWeapon" parent="." instance=ExtResource( 2 )]
rotation = 3.14159
Projectile = ExtResource( 4 )
bullet_amount = 3
bullet_delay = 0.2

[node name="ShotgunWeapon" parent="." instance=ExtResource( 7 )]
bullet_amount = 12
spread = 360

[node name="DroneTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="RocketTimer" type="Timer" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 37 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
[connection signal="timeout" from="DroneTimer" to="." method="_on_DroneTimer_timeout"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
